Create responsive layout for small devices

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section>
             <div class="hero-section"></div>
         </section>
-        <div class="cart-container flex justify-between pt-7 ">
+        <div class="cart-container flex lg:justify-between md:justify-between flex-col md:flex-col lg:flex-row pt-7 ">
             <div class="flex gap-5 ">
                 <div class="card card-compact w-64 bg-base-100 shadow-xl ">
                     <figure><img src="images/shoe.jpeg" alt="Shoes" /></figure>
