Added responsive layout and add some fuctionality using Js.

--- a/index.html
+++ b/index.html
@@ -9,95 +9,154 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class="w-9/12 m-auto">
-        <nav class="mt-4">
-            <div class="navbar  justify-between">
+    <header class=" lg:w-10/12/12 w-11/12 m-auto">
+        <nav class="header-sec ">
+            <div class="header-sec flex justify-between lg:items-stretch items-center lg:py-4 py-1">
                 <div class="justify-between">
-                  <a class="text-4xl font-bold" href="">Shopping<span class="text-4xl text-pink-700 font-bold">C</span>art</a>
+                  <a class="lg:text-4xl text-2xl font-extrabold" href="">Shopping<span class="lg:text-4xl text-2xl  text-pink-700 font-extrabold">C</span>art</a>
                 </div>
                 <div class="flex-none">
                   <div class="dropdown dropdown-end">
                     <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
                       <div class="indicator">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
-                        <span class="badge badge-lg indicator-item text-2xl font-extrabold text-pink-700">0</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" class="lg:h-10 lg:w-10 h-7 w-7 lg:text-4xl" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
+                        <span id="cart-total" class="badge lg:badge-lg badge-base indicator-item text-lg font-extrabold text-pink-700">0</span>
                       </div>
                     </div>
-                    <!-- <div tabindex="0" class="mt-3 z-[1] card card-compact dropdown-content w-52 bg-base-100 shadow">
-                      <div class="card-body">
-                        <span class="font-bold text-lg">8 Items</span>
-                        <span class="text-info">Subtotal: $999</span>
-                        <div class="card-actions">
-                          <button class="btn btn-primary btn-block">View cart</button>
-                        </div>
-                      </div>
-                    </div> -->
                   </div>
-                  <!-- <div class="dropdown dropdown-end">
-                    <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-                      <div class="w-10 rounded-full">
-                        <img alt="Tailwind CSS Navbar component" src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg" />
-                      </div>
-                    </div>
-                    <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                      <li>
-                        <a class="justify-between">
-                          Profile
-                          <span class="badge">New</span>
-                        </a>
-                      </li>
-                      <li><a>Settings</a></li>
-                      <li><a>Logout</a></li>
-                    </ul>
-                  </div> -->
                 </div>
               </div>
         </nav>
     </header>
-    <main class="w-9/12 m-auto min-h-screen">
+    <main class="lg:w-10/12/12 w-11/12 m-auto min-h-screen">
         <section>
             <div class="hero-section"></div>
         </section>
-        <div class="cart-container flex lg:justify-between md:justify-between flex-col md:flex-col lg:flex-row pt-7 ">
-            <div class="flex gap-5 ">
-                <div class="card card-compact w-64 bg-base-100 shadow-xl ">
-                    <figure><img src="images/shoe.jpeg" alt="Shoes" /></figure>
-                    <div class="card-body ">
-                      <div class="flex flex-col justify-center items-center gap-2 mb-5">
-                        <h2 class="text-3xl">Shoes!</h2>
-                        <p cla>Price: $<span>300</span> </p>
-                      </div>
-                      <div class="card-actions justify-center">
+        <h1 class="lg:w-8/12 divider text-center lg:text-3xl text-base font-extrabold lg:py-6 py-2">Featured Products</h1>
+        <div class="cart-container flex lg:justify-between md:justify-between flex-col md:flex-col lg:flex-row">
+            <div class="flex lg:w-8/12 w-full lg:flex-row flex-wrap flex-col lg:gap-12 gap-3">
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/shoe.jpeg" alt="Shoes" /></figure>
+                    <div class="pb-5">
+                    <div class="text-center">
+                        <h2 class="text-2xl font-bold">Shoes!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
                         <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
-                      </div>
+                    </div>
                     </div>
                   </div>
-                <div class="card card-compact w-64 bg-base-100 shadow-xl ">
-                    <figure><img src="images/watch.jpg" alt="Shoes" /></figure>
-                    <div class="card-body ">
-                      <div class="flex flex-col justify-center items-center gap-2 mb-5">
-                        <h2 class="text-3xl">Watch!</h2>
-                        <p cla>Price: $<span>300</span></p>
-                      </div>
-                      <div class="card-actions justify-center">
-                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white add-btn">ADD TO CART</button>
-                      </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/shoe.jpeg" alt="Shoes" /></figure>
+                    <div class="pb-5">
+                    <div class="text-center">
+                        <h2 class="text-2xl font-bold">Shoes!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
                     </div>
                   </div>
-                <div class="card card-compact w-64 bg-base-100 shadow-xl ">
-                    <figure><img src="images/T-shirt.jpg" alt="Shoes" /></figure>
-                    <div class="card-body ">
-                      <div class="flex flex-col justify-center items-center gap-2 mb-5">
-                        <h2 class="text-3xl">T-shirt!</h2>
-                        <p cla>Price: $<span>500</span> </p>
-                      </div>
-                      <div class="card-actions justify-center">
-                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white add-btn">ADD TO CART</button>
-                      </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/watch.jpg" alt="Watch" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">Watch!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span></p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/watch.jpg" alt="Watch" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">Watch!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span></p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/watch.jpg" alt="Watch" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">Watch!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span></p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/T-shirt.jpg" alt="T-Shirt" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">T-shirt!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/T-shirt.jpg" alt="T-Shirt" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">T-shirt!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/T-shirt.jpg" alt="T-Shirt" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">T-shirt!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/T-shirt.jpg" alt="T-Shirt" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">T-shirt!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/T-shirt.jpg" alt="T-Shirt" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">T-shirt!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/T-shirt.jpg" alt="T-Shirt" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">T-shirt!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
+                    </div>
+                  </div>
+                <div class="card card-compact lg:w-80 w-full bg-base-100 shadow-xl ">
+                    <figure class="p-6"><img class="rounded-xl" src="images/T-shirt.jpg" alt="T-Shirt" /></figure>
+                    <div class="pb-5">
+                      <div class="text-center">
+                        <h2 class="text-2xl font-bold">T-shirt!</h2>
+                        <p class="py-2 font-bold">Price: $<span>300</span> </p>
+                        <button class="btn bg-pink-700 hover:bg-pink-800 text-white  add-btn">ADD TO CART</button>
+                    </div>
                     </div>
                   </div>
             </div>
-            <div class="cart-total-container text-center p-7 shadow-lg shadow-slate-200 bg-white">
+            <div class="cart-total-container lg:w-4/12 w-full text-center p-7 shadow-lg shadow-slate-200 bg-white">
                 <h1 class="text-lg font-bold">Cart</h1>
                 <div class="divider m-0 h-3"></div>
                 <h1 class="text-lg font-bold pb-1">Total Cost: $<span></span>0</h1>
